--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,11 @@
 	<title></title>
 </head>
 <body>
-hello world
+<script src="/js/jquery.js"></script>
+<script src="/js/socket.io-1.3.7.js"></script>
+
+<script type="text/javascript">
+	var socket = io();
+</script>
 </body>
 </html>
