--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
 	<title></title>
 </head>
 <body>
+
 <script src="/js/jquery.js"></script>
 <script src="/js/socket.io-1.3.7.js"></script>
+<script src="/js/app.js"></script>
 
-<script type="text/javascript">
-	var socket = io();
-</script>
 </body>
 </html>
