--- a/public/index.html
+++ b/public/index.html
@@ -5,9 +5,15 @@
 </head>
 <body>
 
-<script src="/js/jquery.js"></script>
-<script src="/js/socket.io-1.3.7.js"></script>
-<script src="/js/app.js"></script>
+	<form id='message-form'>
+		<input type="text" name="message"/>
+		<input type="submit" />
+	</form>
+
+
+	<script src="/js/jquery.js"></script>
+	<script src="/js/socket.io-1.3.7.js"></script>
+	<script src="/js/app.js"></script>
 
 </body>
 </html>
