--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,9 @@
 	<title></title>
 </head>
 <body>
+	<div class="messages">
+		
+	</div>
 
 	<form id='message-form'>
 		<input type="text" name="message"/>
