--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,7 @@
 	<script src="/js/jquery.js"></script>
 	<script src="/js/socket.io-1.3.7.js"></script>
 	<script src="/js/app.js"></script>
+	<script src="/js/moment.js"></script>
 
 </body>
 </html>
