--- a/public/index.html
+++ b/public/index.html
@@ -4,20 +4,15 @@
 	<title></title>
 </head>
 <body>
-	<div class="messages">
-		
-	</div>
+	<h1>Join Chat</h1>
 
-	<form id='message-form'>
-		<input type="text" name="message"/>
-		<input type="submit" />
+	<form action='/chat.html'>
+		<label>Display Name</label>
+		<input type="text" name="name"/>
+
+		<label>Room Name</label>
+		<input type="text" name="room"/>
+		<input type="submit" value="Join Chat">
 	</form>
-
-
-	<script src="/js/jquery.js"></script>
-	<script src="/js/socket.io-1.3.7.js"></script>
-	<script src="/js/app.js"></script>
-	<script src="/js/moment.js"></script>
-
 </body>
 </html>
