--- a/public/chat.html
+++ b/public/chat.html
@@ -2,21 +2,45 @@
 <html>
 <head>
 	<title></title>
+	<link rel="stylesheet" type="text/css" href="/css/bootstrap.min.css">
+	<link rel="stylesheet" type="text/css" href="/css/styles.css">
+	<style type="text/css">
+		.well {
+			margin-top: 35px;
+		}
+	</style>
 </head>
 <body>
+	<div class="container">
+		<div class="row">
+			<div class="col-md-6 col-md-offset-3 well">
+				
+				<a href="/index.html">Change Settings</a>
 
-	<a href="/index.html">Change Settings</a>
-	
-	<h1 class="room-title"></h1>
+				<h1 class="room-title text-center"></h1>
 
-	<div class="messages">
-		
+				<ul class="messages list-group">
+
+				</ul>
+
+				<form id='message-form'>
+					<div class="form-group">
+						<div class="input-group">
+							<span class="input-group-addon">
+								<i class="glyphicon glyphicon-comment"></i>
+							</span>
+							<input type="text" name="message" class="form-control" />
+						</div>		
+					</div>
+
+					<div class="form-group">
+						<input type="submit" class="btn btn-default btn-block" />								
+					</div>
+				</form>
+				
+			</div>
+		</div>
 	</div>
-
-	<form id='message-form'>
-		<input type="text" name="message"/>
-		<input type="submit" />
-	</form>
 
 	<script src="/js/QueryParams.js"></script>
 	<script src="/js/jquery.js"></script>
